--- a/notebooks/02_reward_functions.ipynb
+++ b/notebooks/02_reward_functions.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=======================================================\n",
+      "  \"g\" in \"engage\"  (true count: 2)\n",
+      "=======================================================\n",
+      "  Response:\n",
+      "<reasoning>\n",
+      "Counting the number of g's in the word engage\n",
+      "1. e - 0 so far\n",
+      "2. n - 0 so far\n",
+      "3. g - 1 so far\n",
+      "4. a - 1 so far\n",
+      "5. g - 2 so far\n",
+      "6. e - 2 so far\n",
+      "</reasoning>\n",
+      "<answer>\n",
+      "2\n",
+      "</answer>\n",
+      "\n",
+      "  Rewards: RewardBreakdown(formatting=1.0, numbering=1.0, spelling=2.0, counting=1.0, correctness=2.0)\n",
+      "  Total:   7.00\n",
+      "\n",
+      "=======================================================\n",
+      "  \"a\" in \"banana\"  (true count: 3)\n",
+      "=======================================================\n",
+      "  Response:\n",
+      "<reasoning>\n",
+      "Counting the number of a's in the word banana\n",
+      "1. b - 0 so far\n",
+      "2. a - 1 so far\n",
+      "3. n - 1 so far\n",
+      "4. a - 2 so far\n",
+      "5. n - 2 so far\n",
+      "6. a - 3 so far\n",
+      "</reasoning>\n",
+      "<answer>\n",
+      "3\n",
+      "</answer>\n",
+      "\n",
+      "  Rewards: RewardBreakdown(formatting=1.0, numbering=1.0, spelling=2.0, counting=1.0, correctness=2.0)\n",
+      "  Total:   7.00\n",
+      "\n",
+      "=======================================================\n",
+      "  \"r\" in \"strawberry\"  (true count: 3)\n",
+      "=======================================================\n",
+      "  Response:\n",
+      "<reasoning>\n",
+      "Counting the number of r's in the word strawberry\n",
+      "1. s - 0 so far\n",
+      "2. t - 0 so far\n",
+      "3. r - 1 so far\n",
+      "4. a - 1 so far\n",
+      "5. w - 1 so far\n",
+      "6. b - 1 so far\n",
+      "7. e - 1 so far\n",
+      "8. r - 2 so far\n",
+      "9. r - 3 so far\n",
+      "10. y - 3 so far\n",
+      "</reasoning>\n",
+      "<answer>\n",
+      "3\n",
+      "</answer>\n",
+      "\n",
+      "  Rewards: RewardBreakdown(formatting=1.0, numbering=1.0, spelling=2.0, counting=1.0, correctness=2.0)\n",
+      "  Total:   7.00\n"
+     ]
+    }
+   ],
    "source": [
     "correct = read_jsonl(\"../data/samples_correct.jsonl\")\n",
     "\n",
@@ -73,10 +144,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=======================================================\n",
+      "  \"g\" in \"engage\"  (true count: 2)\n",
+      "=======================================================\n",
+      "  Response:\n",
+      "<reasoning>\n",
+      "Counting the number of g's in the word engage\n",
+      "1. e - 0 so far\n",
+      "2. n - 0 so far\n",
+      "3. g - 1 so far\n",
+      "4. a - 1 so far\n",
+      "5. g - 1 so far\n",
+      "6. e - 1 so far\n",
+      "</reasoning>\n",
+      "<answer>\n",
+      "1\n",
+      "</answer>\n",
+      "\n",
+      "  Rewards: RewardBreakdown(formatting=1.0, numbering=1.0, spelling=2.0, counting=0.3333333333333333, correctness=0.0)\n",
+      "  Total:   4.33\n",
+      "\n",
+      "=======================================================\n",
+      "  \"a\" in \"banana\"  (true count: 3)\n",
+      "=======================================================\n",
+      "  Response:\n",
+      "<reasoning>\n",
+      "Counting the number of a's in the word banana\n",
+      "1. b - 0 so far\n",
+      "3. a - 1 so far\n",
+      "5. n - 1 so far\n",
+      "6. a - 2 so far\n",
+      "</reasoning>\n",
+      "<answer>\n",
+      "2\n",
+      "</answer>\n",
+      "\n",
+      "  Rewards: RewardBreakdown(formatting=1.0, numbering=-0.3333333333333333, spelling=-0.6666666666666666, counting=1.0, correctness=0.0)\n",
+      "  Total:   1.00\n",
+      "\n",
+      "=======================================================\n",
+      "  \"r\" in \"strawberry\"  (true count: 3)\n",
+      "=======================================================\n",
+      "  Response:\n",
+      "The word strawberry has 2 r's.\n",
+      "\n",
+      "  Rewards: RewardBreakdown(formatting=0.0, numbering=0.0, spelling=-2.0, counting=-1.0, correctness=0.0)\n",
+      "  Total:   -3.00\n"
+     ]
+    }
+   ],
    "source": [
     "incorrect = read_jsonl(\"../data/samples_incorrect.jsonl\")\n",
     "\n",
@@ -106,17 +231,57 @@
     "- Skipped/extra letters (loses from `spelling_reward_func` and `numbering_reward_func`)\n",
     "- Missing `<reasoning>/<answer>` tags (loses from `format_reward_func`)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16f4f639-4d1b-4303-8a27-8bd2e22205e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average correct: 7.0\n",
+      "Average incorrect: 0.7766666666666667\n",
+      "Pass condition: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_totals = [7.0, 7.0, 7.0]\n",
+    "incorrect_totals = [4.33, 1.0, -3.0]\n",
+    "print(\"Average correct:\", sum(correct_totals)/len(correct_totals))\n",
+    "print(\"Average incorrect:\", sum(incorrect_totals)/len(incorrect_totals))\n",
+    "print(\"Pass condition:\", (sum(correct_totals)/len(correct_totals)) > (sum(incorrect_totals)/len(incorrect_totals)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0a43dfe-fa23-450f-b726-1d5a96b0e2b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
